# datasette-secrets

./: README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
datasette_secrets/: __init__.py  hookspecs.py
datasette_secrets/templates/: secrets_add.html  secrets_index.html  secrets_update.html
tests/: test_secrets.py
