[project]
name = "datasette-secrets"
version = "0.2"
description = "Manage secrets such as API keys for use with other Datasette plugins"
readme = "README.md"
authors = [{name = "Datasette"}]
license = {text = "Apache-2.0"}
classifiers=[
    "Framework :: Datasette",
    "License :: OSI Approved :: Apache Software License"
]
requires-python = ">=3.8"
dependencies = [
    "datasette",
    "cryptography"
]

[project.urls]
Homepage = "https://github.com/datasette/datasette-secrets"
Changelog = "https://github.com/datasette/datasette-secrets/releases"
Issues = "https://github.com/datasette/datasette-secrets/issues"
CI = "https://github.com/datasette/datasette-secrets/actions"

[project.entry-points.datasette]
secrets = "datasette_secrets"

[project.optional-dependencies]
test = ["pytest", "pytest-asyncio", "datasette-test>=0.3.2"]

[tool.pytest.ini_options]
asyncio_mode = "strict"

[tool.setuptools.package-data]
datasette_secrets = ["templates/*"]
