[project]
name = "datasette-secrets"
version = "0.3a0"
description = "Manage secrets such as API keys for use with other Datasette plugins"
readme = "README.md"
authors = [{name = "Datasette"}]
license = "Apache-2.0"
classifiers=[
    "Framework :: Datasette"
]
requires-python = ">=3.10"
dependencies = [
    "datasette>=1.0a21",
    "cryptography"
]

[project.urls]
Homepage = "https://github.com/datasette/datasette-secrets"
Changelog = "https://github.com/datasette/datasette-secrets/releases"
Issues = "https://github.com/datasette/datasette-secrets/issues"
CI = "https://github.com/datasette/datasette-secrets/actions"

[project.entry-points.datasette]
secrets = "datasette_secrets"

[project.optional-dependencies]
test = ["pytest", "pytest-asyncio", "datasette-test>=0.3.2"]

[tool.pytest.ini_options]
asyncio_mode = "strict"

[tool.setuptools.package-data]
datasette_secrets = ["templates/*"]
